--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "Gulp-Boilerplate",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,17 +9,22 @@
     "type": "git",
     "url": "\u0016https://github.com/jessbudd/FFWD.git"
   },
-  "author": "Firefly Web Design",
-  "license": "ISC",
-  "description": "",
+  "author": "Jessica Budd",
+  "license": "MIT",
+  "description": "Starter boilerplate for Gulp/Html/Sass project",
   "devDependencies": {
     "browser-sync": "^2.18.7",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
     "gulp-uglify": "^2.0.1",
-    "gulp-useref": "^3.1.2"
+    "gulp-useref": "^3.1.2",
+    "run-sequence": "^1.2.2"
   }
 }
